// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      nice game 
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ljgBMv cxUAuH"
    >
      * 
    </span>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP sc-cuyoTo Fxdey hFQLbe"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-dxdKQw sc-fTtGjF cbKBdl dxRify"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-iXWgTX hJufT sc-gVZcgN jNTmdz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hZoehQ fIEzDA"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      hey
       
      <span
        class="sc-iXWgTX hJufT sc-gVZcgN jNTmdz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hZoehQ fIEzDA"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-iXWgTX hJufT sc-gVZcgN jNTmdz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hZoehQ fIEzDA"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      hey
       
      <span
        class="sc-iXWgTX hJufT sc-gVZcgN jNTmdz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hZoehQ fIEzDA"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      <span
        class="sc-iXWgTX hJufT sc-gVZcgN jNTmdz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hZoehQ fIEzDA"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-iXWgTX hJufT sc-gVZcgN jNTmdz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hZoehQ fIEzDA"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG jnFebw"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      Hey
       
      <span
        class="sc-iXWgTX hJufT sc-gVZcgN jNTmdz"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hZoehQ fIEzDA"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR eCBHRM"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR eCBHRM"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR eCBHRM"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kIBtVG Ga-DCD"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-djDiuc kpgZVT"
      tabindex="0"
    >
      <span
        class="sc-cVdwKd cpXPHK"
      >
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eillgj bMHfIf"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iXWgTX hJufT sc-DCiKP Fxdey"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hZoehQ fIEzDA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eillgj bMHfIf"
    >
      : 
    </i>
    <span
      class="sc-dxdKQw cbKBdl"
    >
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-ewKWQi ekGrcY"
        tabindex="-1"
      >
        <span
          class="sc-hKOsxR fhSNaj"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
